--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                 </div>
                 <div class="intd">
                     <ul>
-                        <li><a href="">首页</a></li>
+                        <li><a href="https://lesliet4.github.io/blog./">首页</a></li>
                         <li><a href="https://lesliet4.github.io/blog.music/">音樂介紹</a></li>
                         <li><a href="https://lesliet4.github.io/blog.book/">書籍介紹</a></li>
-                        <li><a href="">音樂試聽</a></li>
+                        <li><a href="https://lesliet4.github.io/blog.Music-audition/">音樂試聽</a></li>
                     </ul>
                 </div>
             </div>
